# MC-Calib

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  Windows.md  calib.ps1  calib_dev.ps1  calib_prod.ps1
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
McCalib/: CMakeLists.txt
McCalib/include/: Board.hpp  BoardObs.hpp  Camera.hpp  CameraGroup.hpp  CameraGroupObs.hpp  CameraObs.hpp  Frame.hpp  Graph.hpp  McCalib.hpp  Object3D.hpp  Object3DObs.hpp  OptimizationCeres.h  geometrytools.hpp  logger.h  point_refinement.h  utilities.hpp
McCalib/src/: Board.cpp  BoardObs.cpp  Camera.cpp  CameraGroup.cpp  CameraGroupObs.cpp  CameraObs.cpp  Frame.cpp  Graph.cpp  McCalib.cpp  Object3D.cpp  Object3DObs.cpp  geometrytools.cpp  utilities.cpp
apps/calibrate/: CMakeLists.txt
apps/calibrate/src/: calibrate.cpp
apps/create_charuco_boards/: CMakeLists.txt
apps/create_charuco_boards/src/: create_charuco_boards.cpp
configs/Blender_Images/: calib_param_synth_Scenario1.yml  calib_param_synth_Scenario2.yml  calib_param_synth_Scenario3.yml  calib_param_synth_Scenario4.yml  calib_param_synth_Scenario5.yml  calib_param_synth_diff_size.yml  calib_param_synth_non_square.yml
configs/Real_images/: calib_param_Seq00_Stereo_vision.yml  calib_param_Seq01_Non-overlapping.yml  calib_param_Seq02_Overlapping_multicamera.yml  calib_param_Seq03_hybrid.yml  calib_param_Seq04_Converging_vision.yml  calib_param_Seq05_Non_overlapping_6Cam.yml
docs/: Docker.md  Documentation.md  Doxyfile.in  Windows.md  contributing.rst  mainpage.dox
python_utils/: .pylintrc  Main_compute_pose_error_vs_gt.py  README.md  compute_error_statistic.py  compute_pose_error_vs_gt.py  display_calib_cameras.py  display_calib_object.py  display_cam_obj_pose.py  display_cameras_calib.py  display_object_calib.py  error_statistic.py  format.sh  main_display_cam_obj_pose.py  main_display_cameras_calib.py  main_display_object_calib.py  post_calibration_analysis.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_prod.txt  test.sh  utils.py
src/: Board.cpp  Board.hpp  BoardObs.cpp  BoardObs.hpp  Calibration.cpp  Calibration.hpp  Camera.cpp  Camera.hpp  CameraGroup.cpp  CameraGroup.hpp  CameraGroupObs.cpp  CameraGroupObs.hpp  CameraObs.cpp  CameraObs.hpp  Frame.cpp  Frame.hpp  Graph.cpp  Graph.hpp  Object3D.cpp  Object3D.hpp  Object3DObs.cpp  Object3DObs.hpp  OptimizationCeres.h  geometrytools.cpp  geometrytools.hpp  logger.cpp  logger.h  main_calibrate.cpp  main_create_charuco.cpp  point_refinement.h
tests/: CMakeLists.txt  main.cpp  simple_unit_tests_example.cpp  test_calibration.cpp  test_geometrytools.cpp  test_graph.cpp
tests/calibration_gts/: synth_Scenario1_calibrated_cameras_data.yml  synth_Scenario3_calibrated_cameras_data.yml
tests/configs_for_end2end_tests/: calib_param_synth_Scenario1.yml  calib_param_synth_Scenario2.yml  calib_param_synth_Scenario3.yml  calib_param_synth_Scenario4.yml  calib_param_synth_Scenario5.yml
tests/valgrind_suppress/: boost_valgrind.supp  opencv_valgrind.supp  opencv_valgrind_3rdparty.supp
